--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=producto_venta_vm
+server.port=8081
 
 spring.datasource.url=jdbc:mysql://localhost:3306/db_producto_venta_vm
 spring.datasource.username=root
@@ -9,6 +10,10 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+# Swagger
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
-springdoc.swagger-ui.path=/doc/swagger-ui.html
+springdoc.swagger-ui.path=/swagger-ui.html
+
+# URL base de GestionUsuarios (CORREGIDO a puerto 8083)
+microservicio.gestion_usuarios.url=http://localhost:8083/api/v1/usuarios
